refactor Step1 피드백 반영